NIFI-15209
Introduction of a new property for JoltTransformRecord, which will enable the outputting of different schemas by having multiple output flowfiles