@@ -19,10 +19,8 @@ package org.apache.nifi.processors.jolt;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.jolt.util.JoltTransformStrategy;
 import org.apache.nifi.json.JsonRecordSetWriter;
-import org.apache.nifi.json.JsonTreeReader;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.schema.access.SchemaAccessUtils;
-import org.apache.nifi.schema.inference.SchemaInferenceUtil;
 import org.apache.nifi.serialization.SimpleRecordSchema;
 import org.apache.nifi.serialization.record.MapRecord;
 import org.apache.nifi.serialization.record.MockRecordParser;
@@ -62,14 +60,14 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @DisabledOnOs(OS.WINDOWS) //The pretty printed json comparisons don't work on windows
-public class TestJoltTransformRecord {
+public abstract class TestBaseJoltTransformRecord {
 
     final static String CHAINR_SPEC_PATH = "src/test/resources/specs/chainrSpec.json";
     static String chainrSpecContents;
-    private TestRunner runner;
-    private JoltTransformRecord processor;
-    private MockRecordParser parser;
-    private JsonRecordSetWriter writer;
+    protected TestRunner runner;
+    protected JoltTransformRecord processor;
+    protected MockRecordParser parser;
+    protected JsonRecordSetWriter writer;
 
     @BeforeAll
     static void setUpBeforeAll() throws Exception {
@@ -88,13 +86,16 @@ public class TestJoltTransformRecord {
         runner.addControllerService("writer", writer);
         runner.setProperty(writer, "Schema Write Strategy", "full-schema-attribute");
         runner.setProperty(JoltTransformRecord.RECORD_WRITER, "writer");
+        runner.setProperty(JoltTransformRecord.SCHEMA_WRITING_STRATEGY, getWritingStrategy());
         // Each test must set the Schema Access strategy and Schema, and enable the writer CS
     }
+
+    protected abstract String getWritingStrategy();
 
     @Test
     public void testRelationshipsCreated() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -111,7 +112,7 @@ public class TestJoltTransformRecord {
     @Test
     public void testRelationshipsCreatedFromFile() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -128,7 +129,7 @@ public class TestJoltTransformRecord {
     @Test
     public void testInvalidJOLTSpec() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -157,7 +158,7 @@ public class TestJoltTransformRecord {
     @Test
     public void testSpecIsEmpty() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -170,7 +171,7 @@ public class TestJoltTransformRecord {
     @Test
     public void testSpecNotRequired() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -182,7 +183,7 @@ public class TestJoltTransformRecord {
     @Test
     public void testNoFlowFileContent() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -197,7 +198,7 @@ public class TestJoltTransformRecord {
     @Test
     public void testNoRecords() throws IOException {
         generateTestData(0, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -207,7 +208,7 @@ public class TestJoltTransformRecord {
         runner.run();
         runner.assertQueueEmpty();
         runner.assertTransferCount(JoltTransformRecord.REL_FAILURE, 0);
-        runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
+        runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 0);
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
     }
 
@@ -215,7 +216,7 @@ public class TestJoltTransformRecord {
     public void testInvalidFlowFileContent() throws IOException {
         generateTestData(1, null);
 
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutputSchema.avsc"));
 
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
@@ -233,7 +234,7 @@ public class TestJoltTransformRecord {
     @Test
     public void testCustomTransformationWithNoModule() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -248,12 +249,12 @@ public class TestJoltTransformRecord {
     @Test
     public void testCustomTransformationWithMissingClassName() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
         runner.enableControllerService(writer);
-        final String customJarPath = "src/test/resources/TestJoltTransformRecord/TestCustomJoltTransform.jar";
+        final String customJarPath = "src/test/resources/TestBaseJoltTransformRecord/TestCustomJoltTransform.jar";
         runner.setProperty(JoltTransformRecord.JOLT_SPEC, chainrSpecContents);
         runner.setProperty(JoltTransformRecord.MODULES, customJarPath);
         runner.setProperty(JoltTransformRecord.JOLT_TRANSFORM, JoltTransformStrategy.CUSTOMR);
@@ -263,7 +264,7 @@ public class TestJoltTransformRecord {
 
     @Test
     public void testCustomTransformationWithInvalidClassPath() {
-        final String customJarPath = "src/test/resources/TestJoltTransformRecord/FakeCustomJar.jar";
+        final String customJarPath = "src/test/resources/TestBaseJoltTransformRecord/FakeCustomJar.jar";
         runner.setProperty(JoltTransformRecord.JOLT_SPEC, chainrSpecContents);
         runner.setProperty(JoltTransformRecord.CUSTOM_CLASS, "TestCustomJoltTransform");
         runner.setProperty(JoltTransformRecord.MODULES, customJarPath);
@@ -274,7 +275,7 @@ public class TestJoltTransformRecord {
 
     @Test
     public void testCustomTransformationWithInvalidClassName() {
-        final String customJarPath = "src/test/resources/TestJoltTransformRecord/TestCustomJoltTransform.jar";
+        final String customJarPath = "src/test/resources/TestBaseJoltTransformRecord/TestCustomJoltTransform.jar";
         runner.setProperty(JoltTransformRecord.JOLT_SPEC, chainrSpecContents);
         runner.setProperty(JoltTransformRecord.CUSTOM_CLASS, "FakeCustomJoltTransform");
         runner.setProperty(JoltTransformRecord.MODULES, customJarPath);
@@ -287,7 +288,7 @@ public class TestJoltTransformRecord {
     @MethodSource("getChainrArguments")
     public void testTransformInputWithChainr(Path specPath, String ignoredDescription) throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -301,14 +302,13 @@ public class TestJoltTransformRecord {
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
         transformed.assertAttributeExists(CoreAttributes.MIME_TYPE.key());
         transformed.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/chainrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/chainrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithShiftr() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -323,14 +323,13 @@ public class TestJoltTransformRecord {
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
         transformed.assertAttributeExists(CoreAttributes.MIME_TYPE.key());
         transformed.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithShiftrAccentedChars() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -343,10 +342,9 @@ public class TestJoltTransformRecord {
         runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        transformed.assertAttributeExists(CoreAttributes.MIME_TYPE .key());
+        transformed.assertAttributeExists(CoreAttributes.MIME_TYPE.key());
         transformed.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
@@ -362,20 +360,20 @@ public class TestJoltTransformRecord {
         final Record record1 = new MapRecord(xSchema, Map.of("a", 1, "b", 2, "c", 3));
         final Record record2 = new MapRecord(xSchema, Map.of("a", 11, "b", 21, "c", 31));
         final Record record3 = new MapRecord(xSchema, Map.of("a", 21, "b", 2, "c", 3));
-        final Object[] recordArray1 = new Object[]{record1, record2, record3};
+        final Object[] recordArray1 = new Object[] {record1, record2, record3};
         parser.addRecord((Object) recordArray1);
 
         final Record record4 = new MapRecord(xSchema, Map.of("a", 100, "b", 200, "c", 300));
         final Record record5 = new MapRecord(xSchema, Map.of("a", 101, "b", 201, "c", 301));
-        final Object[] recordArray2 = new Object[]{record4, record5};
+        final Object[] recordArray2 = new Object[] {record4, record5};
         parser.addRecord((Object) recordArray2);
 
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutputSchemaMultipleOutputRecords.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutputSchemaMultipleOutputRecords.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
         runner.enableControllerService(writer);
-        final String spec = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrSpecMultipleOutputRecords.json"));
+        final String spec = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrSpecMultipleOutputRecords.json"));
         runner.setProperty(JoltTransformRecord.JOLT_SPEC, spec);
         runner.setProperty(JoltTransformRecord.JOLT_TRANSFORM, JoltTransformStrategy.SHIFTR);
         runner.enqueue(new byte[0]);
@@ -385,14 +383,13 @@ public class TestJoltTransformRecord {
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
         transformed.assertAttributeExists(CoreAttributes.MIME_TYPE.key());
         transformed.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutputMultipleOutputRecords.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutputMultipleOutputRecords.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithShiftrFromFile() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -407,14 +404,13 @@ public class TestJoltTransformRecord {
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
         transformed.assertAttributeExists(CoreAttributes.MIME_TYPE.key());
         transformed.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/shiftrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/shiftrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithDefaultr() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -427,14 +423,13 @@ public class TestJoltTransformRecord {
         runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithRemovr() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/removrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/removrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -447,15 +442,14 @@ public class TestJoltTransformRecord {
         runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/removrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/removrOutput.json")), new String(transformed.toByteArray()));
 
     }
 
     @Test
     public void testTransformInputWithCardinality() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/cardrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/cardrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -468,15 +462,14 @@ public class TestJoltTransformRecord {
         runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/cardrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/cardrOutput.json")), new String(transformed.toByteArray()));
 
     }
 
     @Test
     public void testTransformInputWithSortr() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/sortrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/sortrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -489,14 +482,13 @@ public class TestJoltTransformRecord {
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
         transformed.assertAttributeExists(CoreAttributes.MIME_TYPE.key());
         transformed.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/sortrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/sortrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithDefaultrExpressionLanguage() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrELOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrELOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -510,8 +502,7 @@ public class TestJoltTransformRecord {
         runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrELOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrELOutput.json")), new String(transformed.toByteArray()));
 
     }
 
@@ -519,7 +510,7 @@ public class TestJoltTransformRecord {
     public void testTransformInputWithModifierDefault() throws IOException {
         generateTestData(1, null);
         // Input schema = output schema, just modifying values
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/inputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/inputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -531,14 +522,13 @@ public class TestJoltTransformRecord {
         runner.run();
         runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/modifierDefaultOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/modifierDefaultOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithModifierDefine() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/modifierDefineOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/modifierDefineOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -551,14 +541,13 @@ public class TestJoltTransformRecord {
         runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/modifierDefineOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/modifierDefineOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithModifierOverwrite() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/modifierOverwriteOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/modifierOverwriteOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -571,14 +560,13 @@ public class TestJoltTransformRecord {
         runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/modifierOverwriteOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/modifierOverwriteOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputWithSortrPopulatedSpec() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/sortrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/sortrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
@@ -592,19 +580,18 @@ public class TestJoltTransformRecord {
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
         transformed.assertAttributeExists(CoreAttributes.MIME_TYPE.key());
         transformed.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/sortrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/sortrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testTransformInputCustomTransformationIgnored() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
         runner.enableControllerService(writer);
-        final String customJarPath = "src/test/resources/TestJoltTransformRecord/TestCustomJoltTransform.jar";
+        final String customJarPath = "src/test/resources/TestBaseJoltTransformRecord/TestCustomJoltTransform.jar";
         final String spec = Files.readString(Paths.get("src/test/resources/specs/defaultrSpec.json"));
         runner.setProperty(JoltTransformRecord.JOLT_SPEC, spec);
         runner.setProperty(JoltTransformRecord.CUSTOM_CLASS, "TestCustomJoltTransform");
@@ -617,19 +604,18 @@ public class TestJoltTransformRecord {
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
         transformed.assertAttributeExists(CoreAttributes.MIME_TYPE.key());
         transformed.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
     public void testExpressionLanguageJarFile() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrOutputSchema.avsc"));
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
         runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
         runner.enableControllerService(writer);
-        URL t = getClass().getResource("/TestJoltTransformRecord/TestCustomJoltTransform.jar");
+        URL t = getClass().getResource("/TestBaseJoltTransformRecord/TestCustomJoltTransform.jar");
         assertNotNull(t);
         final String customJarPath = t.getPath();
         final String spec = Files.readString(Paths.get("src/test/resources/specs/customChainrSpec.json"));
@@ -651,7 +637,7 @@ public class TestJoltTransformRecord {
     @Test
     public void testJoltSpecEL() throws IOException {
         generateTestData(1, null);
-        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrOutputSchema.avsc"));
+        final String outputSchemaText = Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrOutputSchema.avsc"));
 
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(writer, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
@@ -661,8 +647,7 @@ public class TestJoltTransformRecord {
         runner.setProperty(JoltTransformRecord.JOLT_SPEC, "${joltSpec}");
         runner.setProperty(JoltTransformRecord.JOLT_TRANSFORM, JoltTransformStrategy.DEFAULTR);
 
-        final Map<String, String> attributes = Collections.singletonMap("joltSpec",
-                "{\"RatingRange\":5,\"rating\":{\"*\":{\"MaxLabel\":\"High\",\"MinLabel\":\"Low\",\"DisplayType\":\"NORMAL\"}}}");
+        final Map<String, String> attributes = Collections.singletonMap("joltSpec", "{\"RatingRange\":5,\"rating\":{\"*\":{\"MaxLabel\":\"High\",\"MinLabel\":\"Low\",\"DisplayType\":\"NORMAL\"}}}");
         runner.enqueue(new byte[0], attributes);
 
         runner.run();
@@ -670,8 +655,7 @@ public class TestJoltTransformRecord {
         runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
 
         final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/defaultrOutput.json")),
-                new String(transformed.toByteArray()));
+        assertEquals(Files.readString(Paths.get("src/test/resources/TestBaseJoltTransformRecord/defaultrOutput.json")), new String(transformed.toByteArray()));
     }
 
     @Test
@@ -683,63 +667,29 @@ public class TestJoltTransformRecord {
         runner.assertNotValid();
     }
 
-    @Test
-    public void testJoltComplexChoiceField() throws Exception {
-        final JsonTreeReader reader = new JsonTreeReader();
-        runner.addControllerService("reader", reader);
-        runner.setProperty(reader, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaInferenceUtil.INFER_SCHEMA);
-        runner.enableControllerService(reader);
-        runner.setProperty(JoltTransformRecord.RECORD_READER, "reader");
-
-        runner.setProperty(writer, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.INHERIT_RECORD_SCHEMA);
-        runner.setProperty(writer, JsonRecordSetWriter.PRETTY_PRINT_JSON, "true");
-        runner.enableControllerService(writer);
-
-        final String flattenSpec = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/flattenSpec.json"));
-        runner.setProperty(JoltTransformRecord.JOLT_SPEC, flattenSpec);
-        runner.setProperty(JoltTransformRecord.JOLT_TRANSFORM, JoltTransformStrategy.CHAINR);
-
-        final String inputJson = Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/input.json"));
-        runner.enqueue(inputJson);
-
-        runner.run();
-        runner.assertTransferCount(JoltTransformRecord.REL_SUCCESS, 1);
-        runner.assertTransferCount(JoltTransformRecord.REL_ORIGINAL, 1);
-
-        final MockFlowFile transformed = runner.getFlowFilesForRelationship(JoltTransformRecord.REL_SUCCESS).getFirst();
-        assertEquals(Files.readString(Paths.get("src/test/resources/TestJoltTransformRecord/flattenedOutput.json")),
-                new String(transformed.toByteArray()));
-    }
 
     private static Stream<Arguments> getChainrArguments() {
-        return Stream.of(
-                Arguments.of(Paths.get(CHAINR_SPEC_PATH), "has no single line comments"),
+        return Stream.of(Arguments.of(Paths.get(CHAINR_SPEC_PATH), "has no single line comments"),
                 Arguments.of(Paths.get("src/test/resources/specs/chainrSpecWithSingleLineComment.json"), "has a single line comment"));
     }
 
-    private void generateTestData(int numRecords, final BiFunction<Integer, MockRecordParser, Void> recordGenerator) {
+    protected void generateTestData(int numRecords, final BiFunction<Integer, MockRecordParser, Void> recordGenerator) {
         if (recordGenerator == null) {
-            final RecordSchema primarySchema = new SimpleRecordSchema(List.of(
-                    new RecordField("value", RecordFieldType.INT.getDataType())));
-            final RecordSchema seriesSchema = new SimpleRecordSchema(List.of(
-                    new RecordField("value", RecordFieldType.ARRAY.getArrayDataType(RecordFieldType.INT.getDataType()))));
-            final RecordSchema qualitySchema = new SimpleRecordSchema(List.of(
-                    new RecordField("value", RecordFieldType.INT.getDataType())));
-            final RecordSchema ratingSchema = new SimpleRecordSchema(Arrays.asList(
-                    new RecordField("primary", RecordFieldType.RECORD.getDataType()),
-                    new RecordField("series", RecordFieldType.RECORD.getDataType()),
-                    new RecordField("quality", RecordFieldType.RECORD.getDataType())
-            ));
+            final RecordSchema primarySchema = new SimpleRecordSchema(List.of(new RecordField("value", RecordFieldType.INT.getDataType())));
+            final RecordSchema seriesSchema = new SimpleRecordSchema(List.of(new RecordField("value", RecordFieldType.ARRAY.getArrayDataType(RecordFieldType.INT.getDataType()))));
+            final RecordSchema qualitySchema = new SimpleRecordSchema(List.of(new RecordField("value", RecordFieldType.INT.getDataType())));
+            final RecordSchema ratingSchema = new SimpleRecordSchema(
+                    Arrays.asList(new RecordField("primary", RecordFieldType.RECORD.getDataType()), new RecordField("series", RecordFieldType.RECORD.getDataType()),
+                            new RecordField("quality", RecordFieldType.RECORD.getDataType())));
             parser.addSchemaField("rating", RecordFieldType.RECORD);
 
             for (int i = 0; i < numRecords; i++) {
 
                 final Record primaryRecord = new MapRecord(primarySchema, Map.of("value", (10 * i) + 3));
-                final Record seriesRecord = new MapRecord(seriesSchema, Map.of("value", new Integer[]{(10 * i) + 5, (10 * i) + 4}));
+                final Record seriesRecord = new MapRecord(seriesSchema, Map.of("value", new Integer[] {(10 * i) + 5, (10 * i) + 4}));
                 final Record qualityRecord = new MapRecord(qualitySchema, Map.of("value", 3));
 
-                Record ratingRecord = new MapRecord(ratingSchema, Map.of("primary", primaryRecord,
-                        "series", seriesRecord, "quality", qualityRecord));
+                Record ratingRecord = new MapRecord(ratingSchema, Map.of("primary", primaryRecord, "series", seriesRecord, "quality", qualityRecord));
 
                 parser.addRecord(ratingRecord);
             }
